--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ build/CreateProfile/__pycache__/
 build/Login/__pycache__/
 build/SelectProfile/__pycache__/
 build/Signin/__pycache__/
+__pycache__/
